--- a/MD-1/kiem-tra-cuoi-M1/bai3.html
+++ b/MD-1/kiem-tra-cuoi-M1/bai3.html
@@ -12,7 +12,7 @@ viết ct nhập vào một chuỗi bất kì.gọi hàm tìm số kí tự nguy
     function count(chuoi) {
         let dem=0
         for(let i=0;i< chuoi.length;i++) {
-            if(( chuoi[i]=="u")||(chuoi[i]=="e")||(chuoi[i]=="o")||(chuoi[i]=="a")||(chuoi[i]=="i")){
+            if(( chuoi[i]==="u")||(chuoi[i]==="e")||(chuoi[i]==="o")||(chuoi[i]==="a")||(chuoi[i]==="i")){
                 dem++
             }
         } alert(dem);
